# Practica-3

./: AVL.h  CMakeLists.txt  Farmacia.cpp  Farmacia.h  Laboratorio.cpp  Laboratorio.h  Lista.h  MediExpress.cpp  MediExpress.h  PaMedicamento.cpp  PaMedicamento.h  README.md  VDinamico.h  farmacias.csv  main.cpp
Practica3EdMdzPb/: AVL.h  CMakeLists.txt  Farmacia.cpp  Farmacia.h  Laboratorio.h  MediExpress.cpp  MediExpress.h  PaMedicamento.h  VDinamico.h
