cmake_minimum_required(VERSION 3.29)
project(Practica3EdMdzPb)

set(CMAKE_CXX_STANDARD 20)

add_executable(Practica3EdMdzPb main.cpp
        Laboratorio.cpp
        Laboratorio.h
        Lista.h
        MediExpress.cpp
        MediExpress.h
        PaMedicamento.cpp
        PaMedicamento.h
        VDinamico.h
        AVL.h
        Farmacia.cpp
        Farmacia.h)
